logs/dag_id=create_and_populate_taxigov_datawarehouse/run_id=manual__2022-08-28T23:26:18.089109+00:00/task_id=create_dim_dates_table/attempt=1.log
[2022-08-28 23:26:21,589] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_dates_table manual__2022-08-28T23:26:18.089109+00:00 [queued]>
[2022-08-28 23:26:21,595] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_dates_table manual__2022-08-28T23:26:18.089109+00:00 [queued]>
[2022-08-28 23:26:21,595] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2022-08-28 23:26:21,596] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2022-08-28 23:26:21,596] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2022-08-28 23:26:21,605] {taskinstance.py:1397} INFO - Executing <Task(PostgresOperator): create_dim_dates_table> on 2022-08-28 23:26:18.089109+00:00
[2022-08-28 23:26:21,608] {standard_task_runner.py:52} INFO - Started process 2842 to run task
[2022-08-28 23:26:21,610] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'create_and_populate_taxigov_datawarehouse', 'create_dim_dates_table', 'manual__2022-08-28T23:26:18.089109+00:00', '--job-id', '104', '--raw', '--subdir', 'DAGS_FOLDER/create_and_populate_taxigov_datawarehouse_dag.py', '--cfg-path', '/tmp/tmpa6ioxust', '--error-file', '/tmp/tmp85b6mnqq']
[2022-08-28 23:26:21,610] {standard_task_runner.py:80} INFO - Job 104: Subtask create_dim_dates_table
[2022-08-28 23:26:21,651] {task_command.py:371} INFO - Running <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_dates_table manual__2022-08-28T23:26:18.089109+00:00 [running]> on host ddc8002727e0
[2022-08-28 23:26:21,706] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=create_and_populate_taxigov_datawarehouse
AIRFLOW_CTX_TASK_ID=create_dim_dates_table
AIRFLOW_CTX_EXECUTION_DATE=2022-08-28T23:26:18.089109+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-08-28T23:26:18.089109+00:00
[2022-08-28 23:26:21,714] {base.py:68} INFO - Using connection ID 'redshift_default' for task execution.
[2022-08-28 23:26:22,987] {dbapi.py:231} INFO - Running statement: 
    DROP TABLE IF EXISTS dim_dates;

    CREATE TABLE IF NOT EXISTS dim_dates (ts) AS 
        WITH
        distinct_timestamps AS (
            SELECT
                ARRAY(
                    data_abertura,
                    data_despacho,
                    data_local_embarque,
                    data_inicio,
                    data_final
                ) AS timestamp_array
            FROM
                raw__taxigov_corridas
        )
        
        SELECT
            DISTINCT
                ts,
                DATE(ts) AS date,
                EXTRACT(MONTH FROM ts) AS month,
                EXTRACT(YEAR FROM ts) AS year,
                EXTRACT(DOW FROM ts) AS day_of_week,
                CASE
                    WHEN EXTRACT(DOW FROM ts) IN (1, 7) THEN TRUE
                    ELSE FALSE 
                END AS is_weekend
        FROM
            distinct_timestamps,
            distinct_timestamps.timestamp_array AS ts;, parameters: None
[2022-08-28 23:26:23,462] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 211, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 235, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 4:     CREATE TABLE IF NOT EXISTS dim_dates (ts) AS 
                                                    ^

[2022-08-28 23:26:23,471] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=create_and_populate_taxigov_datawarehouse, task_id=create_dim_dates_table, execution_date=20220828T232618, start_date=20220828T232621, end_date=20220828T232623
[2022-08-28 23:26:23,481] {standard_task_runner.py:97} ERROR - Failed to execute job 104 for task create_dim_dates_table (syntax error at or near ")"
LINE 4:     CREATE TABLE IF NOT EXISTS dim_dates (ts) AS 
                                                    ^
; 2842)
[2022-08-28 23:26:23,506] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-08-28 23:26:23,544] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
